# book_exchange_hub

./: README.md  Untitled Diagram.drawio
.github/workflows/: launch-tests.yml
src/: Dockerfile  docker-compose.dev.yml  entrypoint.sh  pyproject.toml  requirements.txt
src/app/: __init__.py  main.py  models.py
src/app/alembic/: env.py
src/app/alembic/versions/: c9334ea59ad2_.py
src/app/books/: enums.py  models.py
src/app/core/: models.py  settings.py
src/app/users/: models.py
